# app-service

./: .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: auto-tag.yml  release.yml
