[project]
name = "app-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "flasgger==0.9.7.1",
    "flask==3.1.0",
    "flask-cors>=5.0.1",
    "google-cloud-storage>=3.1.1",
    "lib-version",
    "prometheus-client>=0.22.1",
    "requests>=2.32.3",
]

[tool.uv.sources]
lib-version = { git = "https://github.com/remla2025-team19/lib-version", tag = "v0.0.9" }
